调整tokenManager构建方式